[gd_scene load_steps=6 format=3 uid="uid://nl1fp0g2yaxy"]

[ext_resource type="Script" path="res://Objects/Bandaid.gd" id="1_gt7fj"]
[ext_resource type="Texture2D" uid="uid://jrxjiq42bywv" path="res://img/Band Aid.png" id="2_gdlu2"]
[ext_resource type="PackedScene" uid="uid://clnlybl3b6l01" path="res://UI/DialogBox.tscn" id="3_750aq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nboni"]
radius = 97.8356
height = 569.008

[sub_resource type="CircleShape2D" id="CircleShape2D_inj67"]
radius = 305.002

[node name="Bandaid" type="StaticBody2D"]
script = ExtResource("1_gt7fj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_gdlu2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-9, -20)
rotation = 0.862193
shape = SubResource("CapsuleShape2D_nboni")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-14, -17)
shape = SubResource("CircleShape2D_inj67")

[node name="DialogBox" parent="." instance=ExtResource("3_750aq")]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
